--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.12 AS build
 
 RUN apk add --update alpine-sdk clang git libssh-dev openssl openssh json-c-dev libssh2-dev \
-    && git clone --depth=1 --single-branch -j "$(nproc)" https://github.com/droberson/ssh-honeypot.git /git-ssh-honeypot \
+    && git clone --depth=1 --single-branch -j "$(nproc)" https://github.com/russwe/ssh-honeypot.git /git-ssh-honeypot \
     && cd /git-ssh-honeypot \
     && make -j "$(nproc)" \
     && chmod 0777 ./bin/ssh-honeypot
